--- a/package.json
+++ b/package.json
@@ -2,10 +2,15 @@
   "name": "vendingmachine",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:5000",
   "dependencies": {
+    "axios": "^0.21.0",
+    "express": "^4.17.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "react-twitter-auth": "0.0.13",
+    "request": "^2.88.2"
   },
   "scripts": {
     "start": "react-scripts start",
