--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "vendingmachine",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:5000",
+ 
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
     "axios": "^0.21.0",
     "express": "^4.17.1",
     "react": "^16.8.6",
